--- a/Polly/templates/start_template.html
+++ b/Polly/templates/start_template.html
@@ -1,2 +1,7 @@
 {% extends 'main_template.html' %}
-{% block mainbody %} Have a cookie {% endblock %}
+{% block mainbody %}
+    Have a cookie
+
+    <a href="/upload/tv">TV</a>
+    <a href="/upload/movie">Film</a>
+{% endblock %}
