--- a/PollyUpload/templates/upload_template.html
+++ b/PollyUpload/templates/upload_template.html
@@ -5,7 +5,7 @@
 
     <form method="post">
         {% csrf_token %}
-        {{ tvform }}
+        {{ form }}
         <div>
             <button name="submit">Submit</button>
         </div>
