--- a/PollyUpload/templates/upload_template.html
+++ b/PollyUpload/templates/upload_template.html
@@ -2,13 +2,14 @@
 {% block title %} {% endblock %}
 {% block mainbody %}
     Please do the needful
-
-    <form method="post">
+<div class="form-group">
+    <form method="post" >
         {% csrf_token %}
         {{ form }}
         <div>
             <button name="submit">Submit</button>
         </div>
     </form>
+</div>
 
 {% endblock %}
