--- a/management/templates/management_index.html
+++ b/management/templates/management_index.html
@@ -1,3 +1,7 @@
 {% extends 'main_template.html' %}
+
+{% block title %} {{ block.super }} - Management {% endblock %}
+
 {% block mainbody %}
+
 {% endblock %}
